--- a/src/app/util/forms/team-form/team-form.component.scss
+++ b/src/app/util/forms/team-form/team-form.component.scss
@@ -41,91 +41,91 @@ cdk-accordion {
   flex-direction: column;
 }
 
-.tera-container {
+.icon-grid {
   display: grid;
-  grid-template-columns: repeat(10, minmax(0, 1fr));
   padding: 0.125rem;
   gap: 0.125rem;
   align-items: center;
   justify-items: start;
+  &.tera-container {
+    margin: 0.5rem 0 0.5rem 0.5rem;
 
-  // .type-wrapper:nth-child(13n + 6) {
-  //   grid-column: span 2 / span 2;
-  // }
+    // .type-wrapper:nth-child(13n + 6) {
+    //   grid-column: span 2 / span 2;
+    // }
 
-  // .type-wrapper:nth-child(13n + 1),
-  // .type-wrapper:nth-child(13n + 2),
-  // .type-wrapper:nth-child(13n + 3),
-  // .type-wrapper:nth-child(13n + 4),
-  // .type-wrapper:nth-child(13n + 5),
-  // .type-wrapper:nth-child(13n + 6) {
-  //   transform: translateX(50%);
-  // }
+    // .type-wrapper:nth-child(13n + 1),
+    // .type-wrapper:nth-child(13n + 2),
+    // .type-wrapper:nth-child(13n + 3),
+    // .type-wrapper:nth-child(13n + 4),
+    // .type-wrapper:nth-child(13n + 5),
+    // .type-wrapper:nth-child(13n + 6) {
+    //   transform: translateX(50%);
+    // }
 
-  .type-wrapper:nth-child(20n + 9) {
-    grid-column: span 2 / span 2;
-  }
-  .type-wrapper:nth-child(20n + 1),
-  .type-wrapper:nth-child(20n + 2),
-  .type-wrapper:nth-child(20n + 3),
-  .type-wrapper:nth-child(20n + 4),
-  .type-wrapper:nth-child(20n + 5),
-  .type-wrapper:nth-child(20n + 6),
-  .type-wrapper:nth-child(20n + 7),
-  .type-wrapper:nth-child(20n + 8),
-  .type-wrapper:nth-child(20n + 9) {
-    transform: translateX(50%);
-  }
+    grid-template-columns: repeat(10, minmax(0, 1fr));
+    .type-wrapper:nth-child(19n + 9) {
+      grid-column: span 2 / span 2;
+    }
+    .type-wrapper:nth-child(19n + 1),
+    .type-wrapper:nth-child(19n + 2),
+    .type-wrapper:nth-child(19n + 3),
+    .type-wrapper:nth-child(19n + 4),
+    .type-wrapper:nth-child(19n + 5),
+    .type-wrapper:nth-child(19n + 6),
+    .type-wrapper:nth-child(19n + 7),
+    .type-wrapper:nth-child(19n + 8),
+    .type-wrapper:nth-child(19n + 9) {
+      transform: translateX(calc(50% + 1px));
+    }
 
-  .type-wrapper {
-    width: 2rem;
-    height: 2rem;
-  }
-}
-
-.z-container {
-  display: grid;
-  grid-template-columns: repeat(7, minmax(0, 1fr));
-  padding: 0.125rem;
-  margin: 0.5rem 0.5rem;
-  gap: 0.125rem;
-  align-items: center;
-
-  // .type-wrapper:nth-child(7n + 7) {
-  //   grid-column: span 2 / span 2;
-  // }
-
-  // .type-wrapper:nth-child(7n + 5),
-  // .type-wrapper:nth-child(7n + 6),
-  // .type-wrapper:nth-child(7n + 7) {
-  //   transform: translateX(50%);
-  // }
-
-  .type-wrapper:nth-child(1) {
-    grid-column: span 2 / span 2;
-    justify-self: end;
-  }
-  .type-wrapper:nth-child(5) {
-    grid-column: span 2 / span 2;
-    justify-self: start;
-  }
-  .type-wrapper:nth-child(11) {
-    grid-column: span 2 / span 2;
-    justify-self: start;
+    .type-wrapper {
+      width: 2rem;
+      height: 2rem;
+    }
   }
 
-  .type-wrapper:nth-child(6),
-  .type-wrapper:nth-child(7),
-  .type-wrapper:nth-child(8),
-  .type-wrapper:nth-child(9),
-  .type-wrapper:nth-child(10),
-  .type-wrapper:nth-child(11) {
-    transform: translateX(50%);
-  }
+  &.z-container {
+    margin: 0.5rem 0.5rem;
 
-  .type-wrapper {
-    width: 3rem;
-    height: 1rem;
+    // .type-wrapper:nth-child(7n + 7) {
+    //   grid-column: span 2 / span 2;
+    // }
+
+    // .type-wrapper:nth-child(7n + 5),
+    // .type-wrapper:nth-child(7n + 6),
+    // .type-wrapper:nth-child(7n + 7) {
+    //   transform: translateX(50%);
+    // }
+
+    grid-template-columns: repeat(7, minmax(0, 1fr));
+
+    .type-wrapper:nth-child(1) {
+      grid-column: span 2 / span 2;
+      justify-self: end;
+    }
+    .type-wrapper:nth-child(5) {
+      grid-column: span 2 / span 2;
+      justify-self: start;
+    }
+    .type-wrapper:nth-child(11) {
+      grid-column: span 2 / span 2;
+      justify-self: start;
+    }
+
+    .type-wrapper:nth-child(6),
+    .type-wrapper:nth-child(7),
+    .type-wrapper:nth-child(8),
+    .type-wrapper:nth-child(9),
+    .type-wrapper:nth-child(10),
+    .type-wrapper:nth-child(11) {
+      transform: translateX(calc(50% + 1px));
+    }
+
+    .type-wrapper {
+      width: 3rem;
+      height: 1rem;
+    }
   }
 }
 
@@ -133,6 +133,7 @@ cdk-accordion {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
+  align-items: center;
 
   > :not(:first-child) {
     margin-left: 1rem;
@@ -143,12 +144,21 @@ cdk-accordion {
     display: flex;
     cursor: pointer;
 
+    &.selected-type {
+      filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.5));
+    }
+
     &:not(.selected-type) {
-      opacity: 0.5;
+      opacity: 0.8;
+      padding: 0.125rem;
+      filter: grayscale(60%);
     }
   }
 
   .captain-subcontainer {
+    &:not(:first-child) {
+      border-left: 1px solid var(--mat-sys-outline-variant);
+    }
     .allnone-bar {
       padding: 0.25rem 0 0;
       display: flex;
@@ -158,10 +168,9 @@ cdk-accordion {
         margin-left: 0.25rem;
       }
       .allnone {
-        grid-column: span 2 / span 2;
         background-color: var(--mat-sys-primary);
         color: var(--mat-sys-on-primary);
-        width: 3rem;
+        width: 6rem;
         height: 1.25rem;
         font-size: 0.8em;
         line-height: 0.8em;
@@ -174,6 +183,12 @@ cdk-accordion {
         }
         cursor: pointer;
       }
+      color: var(--mat-sys-on-primary);
+    }
+
+    &.box-container {
+      display: flex;
+      flex-direction: column;
     }
   }
 }
