--- a/src/app/util/forms/team-form/team-form.component.html
+++ b/src/app/util/forms/team-form/team-form.component.html
@@ -1,5 +1,30 @@
 <div class="main-container">
   @if (importing) {
+    <div class="import-container">
+      <mat-form-field>
+        <mat-label>Pokemon</mat-label>
+        <mat-chip-grid #importChipGrid>
+          @for (monGroup of teamArray.controls; track $index) {
+            <mat-chip-row>
+              <sprite
+                matChipAvatar
+                flipped
+                [pokemon]="monGroup.controls.pokemon.value"
+              ></sprite>
+              {{ monGroup.controls.pokemon.value.name }}
+              <button matChipRemove>
+                <mat-icon>cancel</mat-icon>
+              </button>
+            </mat-chip-row>
+          }
+        </mat-chip-grid>
+        <input
+          placeholder="Add pokemon..."
+          [matChipInputFor]="importChipGrid"
+          (matChipInputTokenEnd)="importPokemon($event.value)"
+        />
+      </mat-form-field>
+    </div>
   } @else {
     <div class="add-bar">
       <pokemon-select
@@ -9,6 +34,56 @@
         appearance="outline"
         label="Add Pokemon"
       ></pokemon-select>
+
+      <button
+        mat-mini-fab
+        class="capt-button"
+        cdkOverlayOrigin
+        (click)="teamOption = true"
+        #trigger="cdkOverlayOrigin"
+      >
+        <mat-icon svgIcon="capt"></mat-icon>
+      </button>
+
+      <ng-template
+        cdkConnectedOverlay
+        [cdkConnectedOverlayOrigin]="trigger"
+        [cdkConnectedOverlayHasBackdrop]="true"
+        cdkConnectedOverlayGrowAfterOpen
+        [cdkConnectedOverlayOffsetY]="4"
+        cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop"
+        (backdropClick)="teamOption = false"
+        [cdkConnectedOverlayOpen]="teamOption"
+        (detach)="teamOption = false"
+      >
+        <div class="flex-overlay">
+          <mat-checkbox
+            [checked]="isAllSelected('tera')"
+            [indeterminate]="partialSelected('tera')"
+            (change)="toggleTeamControl('tera', $event.checked)"
+          >
+            <span> Team Tera</span>
+            <mat-icon svgIcon="tera"></mat-icon>
+          </mat-checkbox>
+          <mat-checkbox
+            [checked]="isAllSelected('z')"
+            [indeterminate]="partialSelected('z')"
+            (change)="toggleTeamControl('z', $event.checked)"
+          >
+            <span> Team Z</span>
+            <mat-icon svgIcon="z"></mat-icon>
+          </mat-checkbox>
+          <mat-checkbox
+            [checked]="isAllSelected('dmax')"
+            [indeterminate]="partialSelected('dmax')"
+            (change)="toggleTeamControl('dmax', $event.checked)"
+          >
+            <span>Team Dynamax</span>
+            <mat-icon svgIcon="dmax"></mat-icon>
+          </mat-checkbox>
+        </div>
+      </ng-template>
+      <div class="add-spacer"></div>
       <button mat-flat-button>Import</button>
     </div>
     @if (teamArray.length > 0) {
@@ -23,13 +98,14 @@
             track monGroup;
             let index = $index
           ) {
-            <cdk-accordion-item #accordionItem="cdkAccordionItem" cdkDrag>
+            <cdk-accordion-item
+              #accordionItem="cdkAccordionItem"
+              cdkDrag
+              (closed)="resetFormeField()"
+            >
               <div *cdkDragPreview>
                 @if (monGroup.controls.pokemon.value) {
-                  <sprite
-                    [flipped]="true"
-                    [pokemon]="monGroup.controls.pokemon.value"
-                  >
+                  <sprite flipped [pokemon]="monGroup.controls.pokemon.value">
                   </sprite>
                 }
               </div>
@@ -57,13 +133,13 @@
                   <div class="icon-container">
                     @if (
                       monGroup.controls.tera.value &&
-                      monGroup.controls.show.controls.tera.value
+                      monGroup.controls.tera.value.length > 0
                     ) {
                       <mat-icon svgIcon="tera"></mat-icon>
                     }
                     @if (
                       monGroup.controls.z.value &&
-                      monGroup.controls.show.controls.z.value
+                      monGroup.controls.z.value.length > 0
                     ) {
                       <mat-icon svgIcon="z"></mat-icon>
                     }
@@ -105,16 +181,15 @@
                         <mat-icon svgIcon="shiny"></mat-icon>
                       </div>
                     </ng-template>
-                    <div class="tab-container">
+                    <div class="cosmetic-container">
                       <dz-slide-toggle
-                        [formControl]="monGroup.controls.dmax"
+                        [formControl]="monGroup.controls.shiny"
                         onSVG="shiny"
                         offSVG="shiny"
                       >
                         Shiny
                       </dz-slide-toggle>
-
-                      <mat-form-field>
+                      <mat-form-field class="small-form">
                         <mat-label>Nickname</mat-label>
                         <input
                           maxlength="18"
@@ -144,14 +219,26 @@
                     <div class="captain-container">
                       <div class="captain-subcontainer box-container">
                         <dz-slide-toggle
-                          [formControl]="monGroup.controls.dmax"
+                          [ngModel]="monGroup.controls.tera.value"
+                          (checkedChange)="
+                            setArrayControl(
+                              monGroup.controls.tera,
+                              $event ? teraTypes : null
+                            )
+                          "
                           onSVG="tera"
                           offSVG="tera"
                         >
                           Tera Captain
                         </dz-slide-toggle>
                         <dz-slide-toggle
-                          [formControl]="monGroup.controls.dmax"
+                          [ngModel]="monGroup.controls.z.value"
+                          (checkedChange)="
+                            setArrayControl(
+                              monGroup.controls.z,
+                              $event ? zTypes : null
+                            )
+                          "
                           onSVG="z"
                           offSVG="z"
                         >
@@ -165,20 +252,35 @@
                           Dynamax Captain
                         </dz-slide-toggle>
                       </div>
-                      @if (monGroup.controls.show.controls.tera.value) {
+                      @if (monGroup.controls.tera.value) {
                         <div class="captain-subcontainer">
                           <div class="allnone-bar">
-                            <button
-                              (click)="addAllTeras(monGroup.controls.tera)"
-                              matRipple
-                              class="allnone"
-                            >
-                              All
-
+                            <div class="allnone-container">
+                              <button
+                                (click)="monGroup.controls.tera.setValue([])"
+                                matRipple
+                                [disabled]="
+                                  !monGroup.controls.tera.value.length
+                                "
+                                class="allnone"
+                              >
+                                None
+                              </button>
                               <mat-icon svgIcon="tera"></mat-icon>
-
-                              None
-                            </button>
+                              <button
+                                (click)="
+                                  addAllTypes(monGroup.controls.tera, teraTypes)
+                                "
+                                matRipple
+                                [disabled]="
+                                  (monGroup.controls.tera.value.length || 0) >
+                                  18
+                                "
+                                class="allnone"
+                              >
+                                All
+                              </button>
+                            </div>
                           </div>
                           <div class="icon-grid tera-container">
                             @for (type of teraTypes; track type) {
@@ -186,15 +288,13 @@
                                 class="type-wrapper"
                                 [ngClass]="{
                                   'selected-type':
-                                    monGroup.controls.tera.value?.includes(
-                                      type
-                                    ),
+                                    monGroup.controls.tera.value.includes(type),
                                 }"
                                 (click)="
                                   toggleType(
                                     monGroup.controls.tera,
                                     type,
-                                    monGroup.controls.tera.value?.includes(type)
+                                    monGroup.controls.tera.value.includes(type)
                                   )
                                 "
                               >
@@ -210,18 +310,31 @@
                           </div>
                         </div>
                       }
-                      @if (monGroup.controls.show.controls.z.value) {
+                      @if (monGroup.controls.z.value) {
                         <div class="captain-subcontainer">
                           <div class="allnone-bar">
-                            <div
-                              (click)="addAllTeras(monGroup.controls.z)"
-                              class="allnone"
-                            >
-                              <span> All </span>
-
+                            <div class="allnone-container">
+                              <button
+                                (click)="monGroup.controls.z.setValue([])"
+                                matRipple
+                                [disabled]="!monGroup.controls.z.value.length"
+                                class="allnone"
+                              >
+                                None
+                              </button>
                               <mat-icon svgIcon="z"></mat-icon>
-
-                              <span>None</span>
+                              <button
+                                (click)="
+                                  addAllTypes(monGroup.controls.z, zTypes)
+                                "
+                                matRipple
+                                [disabled]="
+                                  (monGroup.controls.z.value.length || 0) > 17
+                                "
+                                class="allnone"
+                              >
+                                All
+                              </button>
                             </div>
                           </div>
                           <div class="icon-grid z-container">
@@ -230,13 +343,13 @@
                                 class="type-wrapper"
                                 [ngClass]="{
                                   'selected-type':
-                                    monGroup.controls.z.value?.includes(type),
+                                    monGroup.controls.z.value.includes(type),
                                 }"
                                 (click)="
                                   toggleType(
                                     monGroup.controls.z,
                                     type,
-                                    monGroup.controls.z.value?.includes(type)
+                                    monGroup.controls.z.value.includes(type)
                                   )
                                 "
                               >
@@ -268,43 +381,54 @@
                         <mat-chip-grid #formeChipGrid>
                           @for (
                             forme of monGroup.controls.formes.value ?? [];
-                            track forme
+                            track $index
                           ) {
                             <mat-chip-row
                               (removed)="
-                                removeForme(monGroup.controls.formes, forme)
+                                removeChip(monGroup.controls.formes, $index)
                               "
                             >
-                              <sprite matChipAvatar [name]="forme"></sprite>
-                              {{ forme }}
+                              <sprite
+                                matChipAvatar
+                                flipped
+                                [pokemon]="forme"
+                              ></sprite>
+                              {{ forme.name }}
                               <button matChipRemove>
                                 <mat-icon>cancel</mat-icon>
                               </button>
                             </mat-chip-row>
                           }
                         </mat-chip-grid>
-                        <!-- (matChipInputTokenEnd)="addForme( monGroup.controls.formes,$event)" -->
 
                         <input
-                          placeholder="New formes..."
+                          placeholder="Search formes..."
                           [matChipInputFor]="formeChipGrid"
                           #formeInput
+                          [formControl]="formeFilter"
                           [matAutocomplete]="formeAuto"
-                          [matChipInputSeparatorKeyCodes]="separatorKeyCodes"
                         />
+
                         <mat-autocomplete
                           #formeAuto="matAutocomplete"
                           (optionSelected)="
-                            selectedForme(monGroup.controls.formes, $event);
-                            formeInput.value = ''
+                            selectedForme(monGroup.controls.formes, $event)
                           "
+                          [displayWith]="displayFn"
                         >
                           @for (
-                            formeOption of formeOptions;
+                            formeOption of filteredFormeOptions;
                             track formeOption
                           ) {
-                            <mat-option [value]="formeOption.id">
-                              {{ formeOption.name }}
+                            <mat-option [value]="formeOption">
+                              <div class="flex space-x-2 items-center">
+                                <sprite
+                                  size="2rem"
+                                  flipped
+                                  [pokemon]="formeOption"
+                                ></sprite>
+                                <span> {{ formeOption.name }} </span>
+                              </div>
                             </mat-option>
                           }
                         </mat-autocomplete>
@@ -312,18 +436,57 @@
 
                       <mat-form-field class="small-form">
                         <mat-label>Additional Moves</mat-label>
-                        <mat-chip-grid #moveChipGrid></mat-chip-grid>
+                        <mat-chip-grid #moveChipGrid>
+                          @for (
+                            move of monGroup.controls.moves.value;
+                            track $index
+                          ) {
+                            <mat-chip-row
+                              (removed)="
+                                removeChip(monGroup.controls.moves, $index)
+                              "
+                            >
+                              {{ move }}
+                              <button matChipRemove>
+                                <mat-icon>cancel</mat-icon>
+                              </button>
+                            </mat-chip-row>
+                          }
+                        </mat-chip-grid>
                         <input
                           placeholder="New move..."
                           [matChipInputFor]="moveChipGrid"
+                          (matChipInputTokenEnd)="
+                            addChip(monGroup.controls.moves, $event)
+                          "
                         />
                       </mat-form-field>
+
                       <mat-form-field class="small-form">
                         <mat-label>New Abilities</mat-label>
-                        <mat-chip-grid #abilityChipGrid> </mat-chip-grid>
+                        <mat-chip-grid #abilityChipGrid>
+                          @for (
+                            move of monGroup.controls.abilities.value;
+                            track $index
+                          ) {
+                            <mat-chip-row
+                              (removed)="
+                                removeChip(monGroup.controls.abilities, $index)
+                              "
+                            >
+                              {{ move }}
+                              <button matChipRemove>
+                                <mat-icon>cancel</mat-icon>
+                              </button>
+                            </mat-chip-row>
+                          }
+                        </mat-chip-grid>
                         <input
                           placeholder="New ability..."
                           [matChipInputFor]="abilityChipGrid"
+                          (matChipInputTokenEnd)="
+                            addChip(monGroup.controls.abilities, $event)
+                          "
                         />
                       </mat-form-field>
                     </div>
