--- a/src/app/drafts/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
@@ -14,10 +14,7 @@
       </div>
     </div>
     @if (draftForm) {
-      <draft-form-core
-        [draftForm]="draftForm"
-        (formSubmitted)="editDraft($event)"
-      ></draft-form-core>
+      <draft-form-core (formSubmitted)="editDraft($event)"></draft-form-core>
     } @else {
       <loading></loading>
     }
