--- a/src/app/drafts/draft-overview/draft-form/draft-form-core/draft-form-core.component.scss
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-core/draft-form-core.component.scss
@@ -10,12 +10,14 @@
     font-weight: 600;
   }
   .details-container {
+    padding: 0.5rem 0;
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 0.5rem;
   }
 
   .team-container {
+    padding: 0.25rem 0;
     .team-title {
       color: var(--mat-sys-primary);
       font-weight: 600;
@@ -26,9 +28,19 @@
 
 .button-bar {
   display: flex;
-  justify-content: space-between;
-
-  &:has(:only-child) {
-    justify-content: end;
+  .button-spacer {
+    flex-grow: 1;
   }
+}
+
+ruleset-select,
+format-select,
+mat-form-field {
+  margin-bottom: -1.5rem;
+}
+
+mat-stepper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
