--- a/src/app/images/sprite/sprite.component.scss
+++ b/src/app/images/sprite/sprite.component.scss
@@ -7,14 +7,14 @@ img {
   max-width: 100%;
   max-height: 100%;
   display: block;
+
+  &.sprite-border {
+    filter: url(#borderFilter);
+  }
 }
 
 .flip {
   transform: scaleX(-1);
-}
-
-.sprite-border {
-  filter: url(#borderFilter);
 }
 
 .disabled {
